[project]
name = "prompt_plus"
description = "LLM and VLM nodes to make prompting easier."
version = "1.0.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/5x00/ComfyUI-Prompt-Plus.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "5x00"
DisplayName = "subink"
Icon = ""
